--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "stdlib.h": "c",
         "componenten.h": "c",
         "node.h": "c",
-        "components.h": "c"
+        "components.h": "c",
+        "math.h": "c"
     }
 }
